plugins {
    id 'test-report-aggregation'
    id 'org.sonarqube' version '7.2.2.6593'
    id "org.owasp.dependencycheck" version "12.1.9"
    id 'jacoco'
    id 'org.cyclonedx.bom' version '3.1.0'
    id 'com.diffplug.spotless' version '8.3.0'
}

ext {
    intygClinicalprocessSchemasVersion = "1.1.0.1"
    intygClinicalprocessSchematronVersion = "1.1.0.1"
    intygTransportstyrelsenSchemasVersion = "1.1.0.1"
    rivtaClinicalprocessSchemasVersion = "4.0.5.4"
    rivtaInsuranceprocessSchemasVersion = "3.1.0.5.3"
    schemasContractVersion = "2.2.0.1"

    autovalueVersion = "1.11.1"
    cxfVersion = "4.1.4"
    commonsCollectionsVersion = "4.5.0"
    commonsTextVersion = "1.15.0"
    commonsCsvVersion = "1.14.1"
    commonsIoVersion = "2.21.0"
    equalsVerifierVersion = "4.3.1"
    guavaVersion = "33.5.0-jre"
    googleJavaFormatVersion = "1.34.0"
    itextVersion = "5.5.13.4"
    itext7Version = "7.2.6"
    itextPdfHtmlVersion = "5.0.5"
    jakartaJwsApiVersion = "3.0.0"
    jaxb2Version = "3.0.0"
    nashornVersion = "15.7"
    phSchematronVersion = "9.1.1"
    saxonVersion = "12.9"
    spotbugsAnnotationVersion = "4.9.8"

    springbootMavenBomVersion = "3.5.10"

    nvdMirror = 'https://vulnz-nvd-mirror-devtest.intyg.nordicmedtest.se'
}

allprojects {
    apply plugin: 'maven-publish'
    apply plugin: 'java-library'
    apply plugin: 'idea'
    apply plugin: 'jacoco'

    group = 'se.inera.intyg.common'
    version = System.properties['buildVersion'] ?: '4.3.0-SNAPSHOT'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    dependencies {
        implementation platform("org.springframework.boot:spring-boot-dependencies:${springbootMavenBomVersion}")
        annotationProcessor platform("org.springframework.boot:spring-boot-dependencies:${springbootMavenBomVersion}")
        testAnnotationProcessor platform("org.springframework.boot:spring-boot-dependencies:${springbootMavenBomVersion}")

        implementation "ch.qos.logback:logback-classic"
        implementation "jakarta.annotation:jakarta.annotation-api"
        implementation "jakarta.jws:jakarta.jws-api:${jakartaJwsApiVersion}"
        implementation "jakarta.xml.ws:jakarta.xml.ws-api"

        testImplementation "com.sun.xml.messaging.saaj:saaj-impl"
        testImplementation "junit:junit"
        testImplementation "org.assertj:assertj-core"
        testImplementation "org.glassfish.jaxb:jaxb-runtime"
        testImplementation "org.junit.jupiter:junit-jupiter-api"
        testImplementation "org.junit.jupiter:junit-jupiter-params"
        testImplementation "org.mockito:mockito-junit-jupiter"
        testImplementation "org.mockito:mockito-core"
        testImplementation "org.skyscreamer:jsonassert"
        testImplementation "org.springframework:spring-test"
        testImplementation "org.xmlunit:xmlunit-core"

        testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine"
        testRuntimeOnly "org.junit.vintage:junit-vintage-engine"
    }

    tasks.register('packageTests', Jar) {
        from sourceSets.test.output
        archiveClassifier.set('tests')
    }

    tasks.register('install') {
        description("Publishes artifact to local maven repository.")
        dependsOn(publishToMavenLocal)
    }

    artifacts.archives packageTests
    compileJava.options.encoding = 'UTF-8'
    jar { duplicatesStrategy = DuplicatesStrategy.EXCLUDE }
    testing.suites {
        test { useJUnitJupiter() }
    }

    repositories {
        mavenLocal()
        maven { url "https://nexus.drift.inera.se/repository/it-public/" }
        mavenCentral {
            content {
                excludeGroupByRegex "se\\.inera.*"
            }
        }
    }

    publishing {
        publications {
            maven(MavenPublication) {
                from components.java
            }
        }
        repositories.maven {
            url = uri("https://nexus.drift.inera.se/repository/maven-releases/")
            credentials {
                username = System.properties['ineraNexusUsername']
                password = System.properties['ineraNexusPassword']
            }
        }
    }

    idea {
        module {
            downloadJavadoc = true
        }
    }

    configurations {
        // Remove these due to conflict with Spring SAML which uses bcprov-jdk15.
        implementation.exclude group: "org.bouncycastle", module: "bcpkix-jdk15on"
        implementation.exclude group: "org.bouncycastle", module: "bcprov-jdk15on"
    }

    jacocoTestReport {
        dependsOn test

        reports {
            xml.required = true
            html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
        }

        afterEvaluate {
            classDirectories.setFrom(files(classDirectories.files.collect {
                fileTree(dir: it, exclude: [
                        "**/testability/**",
                        "**/integrationtest/**"
                ])
            }))
        }
    }
}

subprojects {
    apply plugin: 'com.diffplug.spotless'

    spotless {
        java {
            target 'src/*/java/**/*.java'
            licenseHeaderFile(rootProject.file('spotless.license.txt'), 'package ')
            googleJavaFormat(googleJavaFormatVersion)
            removeUnusedImports()
            forbidWildcardImports()
            formatAnnotations()
        }
    }
}

subprojects.collect { subproject -> subproject.name }.each { subprojectName ->
    dependencies { testReportAggregation project(":${subprojectName}") }
}

sonar {
    properties {
        property "sonar.projectKey", "intyg-common"
        property "sonar.projectName", "intyg-common"
        property "sonar.dependencyCheck.jsonReportPath", "${layout.buildDirectory.get()}/reports/dependency-check-report.json" as String
        property "sonar.dependencyCheck.htmlReportPath", "${layout.buildDirectory.get()}/reports/dependency-check-report.html" as String
    }
}

dependencyCheck {
    formats = ['HTML', 'JSON']
    nvd.setDatafeedUrl(nvdMirror)
    analyzers.setAssemblyEnabled(false)
    analyzers.setCentralEnabled(false)
    analyzers.ossIndex.setUsername(project.properties.get('ossIndexUsername') as String)
    analyzers.ossIndex.setPassword(project.properties.get('ossIndexPassword') as String)
}

reporting {
    dependencies {
        testReportAggregation project(':logging-util')
        testReportAggregation project(':common-support')
        testReportAggregation project(':common-web')
        testReportAggregation project(':integration-util')
        testReportAggregation project(':common-schemas')
        testReportAggregation project(':common-services')
        testReportAggregation project(':common-pdf')
        testReportAggregation project(':fk-parent')
        testReportAggregation project(':luse')
        testReportAggregation project(':lisjp')
        testReportAggregation project(':luae_na')
        testReportAggregation project(':luae_fs')
        testReportAggregation project(':af-parent')
        testReportAggregation project(':af00213')
        testReportAggregation project(':af00251')
        testReportAggregation project(':ts-parent')
        testReportAggregation project(':ts-bas')
        testReportAggregation project(':ts-diabetes')
        testReportAggregation project(':tstrk1062')
        testReportAggregation project(':tstrk1009')
        testReportAggregation project(':sos_parent')
        testReportAggregation project(':db')
        testReportAggregation project(':doi')
        testReportAggregation project(':ag-parent')
        testReportAggregation project(':ag114')
        testReportAggregation project(':ag7804')
    }
}